# wb-mm-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/modemmanager-mqtt-review/: SKILL.md
.cargo/: config.toml
docs/: architecture.md  arcnotes.md  codex-handoff.md  dev-workflow.md  reference-wb-mm.md
docs/epitaph/: my_first_codex_chat.md  my_first_codex_chat.original.jsonl  my_first_codex_chat.repaired.jsonl
src/: cli.rs  common.rs  core.rs  dbus.rs  dispatcher.rs  domain.rs  exchange.rs  main.rs  mqtt.rs  tresher.rs
src/dbus/: connection.rs  logics.rs  logstrings.rs  loop.rs  manager.rs  mod.rs  modem.rs  runtime.rs  schema.rs  sms.rs
src/mqtt/: frontend.rs  logics.rs  logstrings.rs  loop.rs  mod.rs  publish.rs  schema.rs  state.rs
src/mqtt/state/: tests.rs
